# metin2omg

./: .gitignore  ANALISIS_BASEFILES.md  ANALISIS_PROBLEMA_LOGIN.md  ANALISIS_UBUNTU24.md  CHECKLIST_CONEXION_CLIENTE.md  CHECKLIST_FINAL.md  COMO_EJECUTAR_CLIENTE.md  COMPILAR_CLIENTE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ubuntu24  EMERGENCIA_MYSQL.md  GESTION_ESPACIO_DISCO.md  INSTALACION_UBUNTU24.sh  INSTRUCCIONES_COMPLETAS.md  INSTRUCCIONES_MYSQL_EXISTENTE.md  MAPEO_BASES_DATOS.md  PASOS_FINALES_CLIENTE.md  QUICK_START.md  README.md  RESOLVER_COLUMNAS_FALTANTES.md  RESOLVER_CONFLICTO_VPS.md  SOLUCION_ARGON2.md  SOLUCION_AUTENTICACION.md  SOLUCION_ESTADO_CANALES.md  SOLUCION_MSVCR100.md  SOLUCION_PACKAGE.md  TABLAS_FALTANTES.md  USAR_ETERNEXUS.md  VERIFICACION_CONEXION.md  VERIFICACION_FLUJO_COMPLETO.md  actualizar-cuenta-argon2-final.sh  actualizar-cuenta-completo.sh  actualizar-cuenta-directo.sh  actualizar-cuenta-simple.sh  actualizar-cuenta-test.sh  actualizar-password-cuenta.sh  actualizar-vps-optimizado.sh  actualizar-vps.sh  analizar-errores-sequence.sh  (+139 more)
Client-20251206T130044Z-3-001/Client/Client/Client/Eternexus/root/: serverinfo.py
docker/: agregar-columnas-faltantes.sql  corregir-problemas-inicializacion.sql  create-all-tables.sql  docker-entrypoint.sh  importar-datos-dump.sh  importar-datos-minimos-skill.sh  limpiar-docker.sh  start-servers.sh  verificar-conexion-cliente.sh  verificar-servidor-activo.sh  verificar-y-actualizar-tablas.sh  verificar-y-crear-todo.sh
gamefiles/data/quest/: make.py
src/db/src/: ClientManagerBoot.cpp
src/game/src/: input_db.cpp  input_login.cpp
src/libsql/src/: CAsyncSQL.cpp
src/quest/: CMakeLists.txt
